# nwn-ee-bridge-rust-proxy

./: .gitattributes  .gitignore  Cargo.toml  README.md  legal.md
proxy2/: Cargo.toml  build.rs
proxy2/src/: architecture_guard.rs  config.rs  crc.rs  ee_crypto.rs  identity.rs  log.rs  main.rs  net.rs  nwsync.rs  strict.rs  translate.rs
proxy2/src/packet/: bn.rs  m.rs  mod.rs
proxy2/src/translate/: ambient.rs  area.rs  area_change_day_night.rs  area_visual_effect.rs  baseitems.rs  bm.rs  bn.rs  camera.rs  char_list.rs  chat.rs  client_area.rs  client_char_list.rs  client_character_sheet.rs  client_device.rs  client_gui_event.rs  client_gui_inventory.rs  client_high.rs  client_input.rs  client_login.rs  client_module.rs  client_quickbar.rs  client_server_admin.rs  client_server_status.rs  client_side_message.rs  cnw_message.rs  custom_token.rs  cutscene.rs  diagnostics.rs  dialog.rs  game_obj_update.rs  gameplay_stream.rs  genericdoors.rs  gui_timing_event.rs  inventory.rs  item_update_active_props.rs  journal.rs  live_object.rs  live_object_update.rs  loadbar.rs  login.rs  (+13 more)
proxy2/src/translate/bn/: bncr.rs  bncs.rs  bndm.rs  bndp.rs  bndr.rs  bnds.rs  bner.rs  bnes.rs  bnlm.rs  bnlr.rs  bnvr.rs  bnvs.rs  bnxi.rs  bnxr.rs  wire.rs
proxy2/src/translate/char_list/: gff.rs
proxy2/src/translate/live_object_update/: add.rs  add_guard.rs  appearance.rs  bits.rs  boundary.rs  class_rows.rs  creature.rs  creature_add.rs  cursor.rs  door.rs  effects.rs  fixture_free_tests.rs  fragment_spans.rs  gui.rs  inventory.rs  item.rs  locstring.rs  object_ids.rs  placeable.rs  (+14 more)
(+68 files in other folders)
